[workspace]
resolver = "3"
members = ["egui_json_tree", "demo"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Duncan MacKinnon <dmackdev@gmail.com>"]
repository = "https://github.com/dmackdev/egui_json_tree"

[workspace.dependencies]
egui = { version = "0.33", default-features = false }
eframe = "0.33"
egui_kittest = "0.33"
serde_json = { version = "1" }
