[package]
name = "demo"
version = "0.1.0"
authors = ["Duncan MacKinnon <dmackdev@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
eframe = { workspace = true }
egui = { workspace = true, default-features = false }
egui_json_tree = { path = "../egui_json_tree" }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
