[package]
name = "demo"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eframe = { workspace = true }
egui = { workspace = true, default-features = false }
egui_json_tree = { path = "../egui_json_tree" }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
