[package]
name = "egui_json_tree"
version = "0.14.0"
description = "An interactive JSON tree visualiser for egui, with search and highlight functionality."
keywords = ["json", "egui", "gui", "ui", "widget"]
categories = ["gui", "visualization"]
include = ["src/*.rs", "../LICENSE-MIT", "../LICENSE-APACHE", "Cargo.toml"]
publish = true

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
egui = { workspace = true, default-features = false }
serde_json = { workspace = true, optional = true }
simd-json = { version = "0.13", optional = true }

[features]
default = ["serde_json"]
serde_json = ["dep:serde_json"]
simd_json = ["dep:simd-json"]

[dev-dependencies]
egui = { workspace = true, default-features = true }                 # egui_kittest snapshot testing needs default features
egui_kittest = { workspace = true, features = ["wgpu", "snapshot"] }
