[package]
name = "example"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"                                    # to access the DOM (to hide the loading text)
egui = { version = "0.29", default-features = false }
serde_json = { version = "1" }
eframe = "0.29"
egui_json_tree = { path = "../" }
log = "0.4"

[[bin]]
name = "demo"
path = "demo.rs"
