[package]
name = "example"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = "0.29"
egui = { version = "0.29", default-features = false }
egui_json_tree = { path = "../" }
log = "0.4"
serde_json = { version = "1" }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"                                    # to access the DOM (to hide the loading text)

[[bin]]
name = "demo"
path = "demo.rs"
