[package]
name = "demo"
version = "0.1.0"
authors = ["Duncan MacKinnon <dmackdev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.76"
publish = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = "0.29"
egui = { version = "0.29", default-features = false }
egui_json_tree = { path = "../../" }
log = "0.4"
serde_json = { version = "1" }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"                                    # to access the DOM (to hide the loading text)
